@@ -1,33 +1,65 @@
 package ru.yandex.practicum.filmorate.service.film;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.dto.FilmDto;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
+import ru.yandex.practicum.filmorate.model.*;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
+import ru.yandex.practicum.filmorate.storage.filmGenre.FilmGenreStorage;
+import ru.yandex.practicum.filmorate.storage.genre.GenreStorage;
+import ru.yandex.practicum.filmorate.storage.like.LikeStorage;
+import ru.yandex.practicum.filmorate.storage.mpa.MpaStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class FilmService {
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final GenreStorage genreStorage;
+    private final MpaStorage mpaStorage;
+    private final FilmGenreStorage filmGenreStorage;
+    private final LikeStorage likeStorage;
 
-    @Autowired
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
-        this.filmStorage = filmStorage;
-        this.userStorage = userStorage;
-    }
 
-    public Film getFilm(int filmId) {
-        return filmStorage.getFilm(filmId);
+    public FilmDto getFilm(int filmId) {
+        return filmStorage.getFilm(filmId).map(FilmMapper::mapToFilmDto).orElseThrow(() -> new NotFoundException("Фильм не найден с ID: " + filmId));
     }
 
     public Film addFilm(Film film) {
-        return filmStorage.addFilm(film);
+        List<Integer> mpas = mpaStorage.getRatings().stream().map(Mpa::getId).toList();
+
+        if (!mpas.contains(film.getMpa().getId())) {
+            throw new NotFoundException("Рейтинг с ID " + film.getMpa().getId() + " не найден");
+        }
+
+        List<Genre> filmGenres = film.getGenres();
+
+        if (filmGenres != null && !filmGenres.isEmpty()) {
+            List<Integer> genreIds = genreStorage.getGenres().stream().map(Genre::getId).toList();
+            List<Integer> filmGenreIds = film.getGenres().stream().map(Genre::getId).toList();
+
+            for (Integer genreId : filmGenreIds) {
+                if (!genreIds.contains(genreId)) {
+                    throw new NotFoundException("Жанр с ID " + genreId + " не найден");
+                }
+            }
+        }
+        Film result = filmStorage.addFilm(film);
+
+        if (filmGenres != null && !filmGenres.isEmpty()) {
+            List<Integer> filmGenreIds = film.getGenres().stream().map(Genre::getId).toList();
+
+            for (Integer genreId : filmGenreIds) {
+                filmGenreStorage.addFilmGenre(film.getId(), genreId);
+            }
+        }
+
+        return result;
     }
 
     public Film updateFilm(Film film) {
@@ -38,36 +70,33 @@ public class FilmService {
         filmStorage.removeFilm(id);
     }
 
-    public Collection<Film> getFilms() {
-        return filmStorage.getFilms();
+    public Collection<FilmDto> getFilms() {
+        return filmStorage.getFilms().stream().map(FilmMapper::mapToFilmDto).collect(Collectors.toList());
     }
 
     public void addLike(int id, int userId) {
-        Film film = filmStorage.getFilm(id);
-        User user = userStorage.getUser(userId);
+        Optional<Film> optionalFilm = filmStorage.getFilm(id);
+        Optional<User> optionalUser = userStorage.getUser(userId);
 
-        if (film != null && user != null) {
-            Set<Integer> likes = film.getLikes();
-            likes.add(userId);
+        if (optionalFilm.isPresent() && optionalUser.isPresent()) {
+            likeStorage.addLike(id, userId);
         }
     }
 
     public void removeLike(int id, int userId) {
-        Film film = filmStorage.getFilm(id);
-        User user = userStorage.getUser(userId);
+        Optional<Film> optionalFilm = filmStorage.getFilm(id);
+        Optional<User> optionalUser = userStorage.getUser(userId);
 
-        if (film != null && user != null) {
-            Set<Integer> likes = film.getLikes();
-            likes.remove(userId);
+        if (optionalFilm.isPresent() && optionalUser.isPresent()) {
+            likeStorage.removeLike(id, userId);
         }
     }
 
-    public Collection<Film> getMostLikedFilms(int count) {
+    public Collection<FilmDto> getMostLikedFilms(int count) {
         Collection<Film> films = filmStorage.getFilms();
-        Comparator<Film> comparator = (f1, f2) -> f2.getLikes().size() - f1.getLikes().size();
+        Comparator<Film> comparator = (f1, f2) -> f2.getLikes() - f1.getLikes();
 
-        Collection<Film> f = films.stream().sorted(comparator).limit(count).collect(Collectors.toList());
-        System.out.println(f);
-        return f;
+        Collection<Film> f = films.stream().sorted(comparator).limit(count).toList();
+        return f.stream().map(FilmMapper::mapToFilmDto).collect(Collectors.toList());
     }
 }
